--- a/src/main/resources/templates/currencies_toTry.html
+++ b/src/main/resources/templates/currencies_toTry.html
@@ -17,16 +17,15 @@
     </button>
 </nav>
 <div class="container">
-    <div class="row">
+    <div class="row pt-3">
         <h2>List of CURRENCY to TRY Table</h2>
     </div>
-    <div class="row">
-        <h3 style="color: mediumvioletred;">Last update of Table :  </h3>
-        <h3 th:text="${' ' + currencies.get(0).getTimeLastUpdateUtc()}" style="color: mediumvioletred;"></h3>
-    </div>
-    <div class="row">
-        <div class="col-lg-3">
-            <a th:href="@{/api/v1/currency}" class="btn btn-success btn-sm mb-3">Switch to TRY to CURRENCY table</a>
+    <div class="row mt-5 mb-2">
+        <div class="col-9">
+            <h3 th:text="${'Last update of table :  ' + currencies.get(0).getTimeLastUpdateUtc()}" style="color: mediumvioletred;"></h3>
+        </div>
+        <div class="col-3">
+            <a th:href="@{/api/v1/currency}" class="btn btn-success btn-sm mb-3">Switch to CURRENCY to TRY table</a>
         </div>
     </div>
     <table class="table table-striped table-bordered">
